# leadmap-local

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  alembic.ini  package.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  format-diagnostic.yml  test-diagnostic.yml
backend/leadmap/: config.py  main.py
backend/tests/: conftest.py  test_api_persistence.py  test_assisted_session_api.py  test_assisted_sessions.py  test_browser_ipc_coverage.py  test_browser_profile_configuration.py  test_browser_protocol.py  test_dashboard.py  test_discovery_slice.py  test_freshness.py  test_geographic_imports.py  test_geographic_storage.py  test_geography_api.py  test_geography_catalog.py  test_geography_cli.py  test_geography_coverage.py  test_geography_territory_links.py  test_geojson_validation.py  test_google_maps_visible_cards.py  test_health.py  test_migration_smoke.py  test_normalization.py  test_official_geography_setup.py  test_persistence.py  test_repository_governance.py  test_visible_candidate_review.py  test_visible_capture_api.py  test_workspace_api.py
docs/: ARCHITECTURE.md  CURRENT_STATE.md  PRODUCT_SPEC.md  ROADMAP.md
docs/ADR/: 0001-monorepo-local-web-app.md  (+1 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vitest.config.ts
frontend/src/: api.ts  (+7 more)
scripts/: bootstrap.ps1  create-public-github-repo.ps1  export-review-package.ps1  import-geography.ps1  run-dev.ps1  setup-ireland-geography.ps1  verify.ps1
(+41 files in other folders)
