[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "leadmap-local"
version = "0.3.0"
description = "Local-first territory intelligence and lead research workbench"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.8,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
browser = ["playwright>=1.54,<2"]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<3",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "pytest-playwright>=0.7,<1",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/leadmap"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-ra --strict-markers --cov=backend/leadmap --cov-report=term-missing"
pythonpath = ["."]

[tool.ruff]
exclude = [".git", ".venv", "node_modules", "dist", "coverage", "htmlcov", "patch-backups"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["backend.leadmap"]
exclude = ["backend/leadmap/persistence/migrations"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
